--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-  <!-- <div>
+  <div>
     <img src="../../avanthika.png" class="avatar"/>
-  </div> -->
+  </div>
   <mat-card-title>AVANTHIKA COLLECTIONS</mat-card-title>
   <mat-card-content>
     <form [formGroup]="loginForm" (ngSubmit)="login()">
