--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -5,24 +5,20 @@
 #loaderDiv {
   position: fixed;
   top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
-  left: 0;
-  z-index: 9999;
-  background-color: white;
+  background: white;
   opacity: 0.6;
-  text-align: center;
-  padding-top: 21%;
+  z-index: 99;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
-.loader {
-  left: 43%;
-  top: 31%;
-  margin-left: -32px;
-  margin-top: -32px;
-  display: block;
-  overflow: hidden !important;
+#loader {
   width: 250px;
-  display: inline-flex;
-  flex-flow: row wrap;
+  background-repeat: no-repeat;
+  background-position: center;
 }
