Made loader responsive.

--- a/public/src/app/admin-header/admin-header.component.html
+++ b/public/src/app/admin-header/admin-header.component.html
@@ -34,6 +34,6 @@
 
 <!-- Loading div starts -->
 <div id="loaderDiv" *ngIf="loading">
-  <img src="../../assets/loader-gif.gif" class="loader" />
+  <img src="../../assets/loader-gif.gif" id="loader" />
 </div>
 <!-- Loading div ends -->
