--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -34,6 +34,7 @@
 </div>
 <!-- Loading div starts -->
 <div id="loaderDiv" *ngIf="loading">
-  <img src="../../assets/loader-gif.gif" class="loader" />
+  <!-- <div id="loader"></div> -->
+  <img src="../../assets/loader-gif.gif" id="loader" />
 </div>
 <!-- Loading div ends -->
