Styles added to adminlogin, admin-header.

--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -3,7 +3,9 @@
     <div>
       <img src="../../avanthika.png" class="avatar"/>
     </div>
-    <mat-card-title>AVANTHIKA COLLECTIONS</mat-card-title>
+    <mat-card-title>
+      <b>AVANTHIKA COLLECTIONS</b>
+    </mat-card-title>
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="login()">
         <p>
