--- a/public/src/app/admin-header/admin-header.component.html
+++ b/public/src/app/admin-header/admin-header.component.html
@@ -1,23 +1,36 @@
 <header>
-  <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
-    <div class="container">
-      <div class="nav-header">
-        <img [routerLink]="['/adminpage']" src="../../avanthika.png" height="55px" style="cursor: pointer; outline: none;"/>
-        <a class="navbar-brand">          
-          <mat-toolbar [routerLink]="['/adminpage']" style="outline: none; background-color: #FFF; cursor: pointer;">
-            <span>Avanthika Collections</span>
-          </mat-toolbar>
-        </a>
-      </div>
-      <ul>
-        <li class="p-10 phone-dispaly border-left" (click)="openDialog()">
-          <svg style="cursor: pointer;" width="24" height="24" viewBox="0 0 24 24" fill="#475F7B">
-            <path d="M13 16L18 12 13 8 13 11 4 11 4 13 13 13z" />
-            <path
-              d="M20,3h-9C9.897,3,9,3.897,9,5v4h2V5h9v14h-9v-4H9v4c0,1.103,0.897,2,2,2h9c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z" />
-          </svg>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light"
+  style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.1);">
+    <img [routerLink]="['/adminpage']" src="../../avanthika.png" height="55px" style="cursor: pointer; outline: none; border-radius: 50%; border: 1px solid #cecece; border-radius: 50%; margin-right: 10px;"/>
+    <a class="navbar-brand" [routerLink]="['/adminpage']">Avanthika Collections</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['/adminpage']">Home <span class="sr-only">(current)</span></a>
+        </li>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Products
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" style="cursor: pointer;">Upload Product</a>
+            <a class="dropdown-item" style="cursor: pointer;">Edit Product</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">Orders</a>
         </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <button class="btn btn-danger" (click)="openDialog()">Logout</button>
+      </form>
     </div>
   </nav>
 </header>
@@ -28,7 +41,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" mat-raised-button style="outline: none;" [mat-dialog-close]="false">No, Cancel</button>
-    <button type="button" mat-raised-button style="outline: none;" color="primary" (click)="logout()" [mat-dialog-close]="false">Yes, Logout</button>
+    <button type="button" mat-raised-button color="warn" style="outline: none;" (click)="logout()" [mat-dialog-close]="false">Yes, Logout</button>
   </div>
 </ng-template>
 
