--- a/public/src/app/admin-header/admin-header.component.html
+++ b/public/src/app/admin-header/admin-header.component.html
@@ -19,7 +19,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" [routerLink]="['/adminpage/uploadproduct']" style="cursor: pointer;">Upload Product</a>
-            <a class="dropdown-item" [routerLink]="['/adminpage/editproduct/id']" style="cursor: pointer;">Edit Product</a>
+            <a class="dropdown-item" [routerLink]="['/adminpage/products']" style="cursor: pointer;">View All Products</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item">Something else here</a>
           </div>
